--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,11 @@
+2006-09-15  bayside
+
+        * 新規追加
+            - Multimedia/xmonapeg
+
+        * X/monafile/FileBrowser.cpp: xmonapeg サポート
+        * X/monafile/Icon.cpp: xmonapeg サポート
+
 2006-09-14  higepon  <higepon@users.sourceforge.jp>
 
         * Net/NetServer/Mona/Makefile (ADDLINK): -lPci -> -lpci
