--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-20  higepon  <higepon@users.sourceforge.jp>
+
+        * テストコミット
+
 2006-09-19  bayside
 
         * core/shell_server/Shell.cpp (Shell::Shell): AUTOEXEC.MSH 中の @EXEC が上手く動かない問題修正。
