--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2006-09-23  bayside
+
+        * Sysutils/startx: 新規追加
+
 2006-09-16  bayside
 
         * Multimedia/xmonapeg/monapeg.cpp: 起動時に再生するファイルの存在チェックを追加
