--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,9 @@
+2006-09-25  bayside
+
+        * Net/NetServer/Mona/Makefile: インストール位置を /APPS から /SERVERS に変更
+
+        * X/monafile/FileManager.cpp: 開始位置を /APPS に変更
+
 2006-09-24  bayside
 
         * Games/gtetris: 新規追加
