--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,6 +1,6 @@
 2006-09-27  bayside
 
-        * Emularators/infones: BayGUI ‚É‘Î‰ž
+        * Emulators/infones: BayGUI ‚É‘Î‰ž
 
 2006-09-25  bayside
 
