--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-05  higepon  <higepon@users.sourceforge.jp>
+
+        * Makefile (clean): make -> $(MAKE)
+
 2006-10-03  bayside
 
         * Sysutils/startx: キーボード操作に対応
