--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-11  higepon  <higepon@users.sourceforge.jp>
+
+        * .cvsignore Çè¡ÇµÇΩÅB
+
 2006-10-05  higepon  <higepon@users.sourceforge.jp>
 
         * Makefile (clean): make -> $(MAKE)
