--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-11  higepon  <higepon@users.sourceforge.jp>
+
+        * .cvsignoreを消す。
+
 2006-10-07  higepon  <higepon@users.sourceforge.jp>
 
         * core/file_server/FAT12/FAT12FileSystem.cpp (FAT12FileSystem::read): 共有メモリの割り当てはコンクリートFSに任せる（mem->Size == readSizeにしたいので）
