--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,5 +1,7 @@
 2006-10-11  higepon  <higepon@users.sourceforge.jp>
 
+        * tmpmonalibc: monalibc‚Éæ‚è‚Ü‚ê‚½‚Ì‚Åíœ
+
         * .cvsignore ‚ğÁ‚µ‚½B
 
 2006-10-05  higepon  <higepon@users.sourceforge.jp>
