--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-14  bayside
+
+        * Devel/sms_gc: V‹K’Ç‰Á
+
 2006-10-11  higepon  <higepon@users.sourceforge.jp>
 
         * tmpmonalibc: monalibc‚Éæ‚è‚Ü‚ê‚½‚Ì‚Åíœ
