--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -2,6 +2,10 @@
 
         * Devel/sms_gc: V‹K’Ç‰Á
 
+        * Devel/libjava: V‹K’Ç‰Á
+
+        * Misc/jhello: V‹K’Ç‰Á
+
 2006-10-11  higepon  <higepon@users.sourceforge.jp>
 
         * tmpmonalibc: monalibc‚Éæ‚è‚Ü‚ê‚½‚Ì‚Åíœ
