--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,7 @@
+2006-10-21  higepon  <higepon@users.sourceforge.jp>
+
+        * core: Tinoさんによるパッチ。int syscall_mthread_create_with_arg(void __fastcall(*f)(void*), void* p);
+
 2006-10-14  bayside
 
         * core/pe_server: auto-import 対策パッチ適用
