--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,6 +1,6 @@
 2007-01-16  higepon  <higepon@users.sourceforge.jp>
 
-        * mona-stdio‚ð merge <<>>
+        * mona-stdio‚ð merge <<3946>>
 
 2006-12-25  higepon  <higepon@users.sourceforge.jp>
 
