--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,6 +1,6 @@
 2007-01-16  higepon  <higepon@users.sourceforge.jp>
 
-        * Makefile: contrib-stdio ‚ð merge
+        * Makefile: contrib-stdio ‚ð merge<<3948>>
 
 2006-12-12  higepon  <higepon@users.sourceforge.jp>
 
