--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-07  higepon  <higepon@users.sourceforge.jp>
+
+        * --disable-runtime-pseudo-reloc を追加し、monapi_crt.cpp から  _pei386_runtime_relocator()を削除
+
+        * core/monapi/stub_for_linker.cpp: monapi_crt.cpp から __main を移動
+
 2007-01-20  higepon  <higepon@users.sourceforge.jp>
 
         * core/file_server/IDEDriver.cpp (IDEDriver::protocolPacket): junjunnさんのパッチ。sleepをコメントアウト。<<3962>>
