--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-02  higepon  <higepon@users.sourceforge.jp>
+
+        * core/scheme/libcont/cont.c (cont_restore): 自分自身のスタックを上書きしているバグを修正。
+
 2007-04-29  higepon  <higepon@users.sourceforge.jp>
 
         * core/scheme/mona_shell.cpp (class CommandHistory): シェルにコマンドヒストリ機能を追加。Ctrl-p, Ctrl-n, Up, Down で操作可能。
