--- a/mona/ChangeLog
+++ b/mona/ChangeLog
@@ -1,3 +1,7 @@
+2007-05-18  higepon  <higepon@users.sourceforge.jp>
+
+        * core/scheme/scheme.cpp (scheme_interactive): fix call-process output bug.
+
 2007-05-14  higepon  <higepon@users.sourceforge.jp>
 
         * core/scheme/lib/conf.scm.in (mona-gui-auto-start): conf.scm for configuration.
